# ghostfolio-swedish-ticker-scraper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  README.md  ¨
backend/src/: AvanzaGetFundInfo.rs  AvanzaSearch.rs  ghostfolio_api.rs  main.rs
backend/templates/: index.hbs  index.html.tera  index.tera  init.html.tera  init.tera  layout.html.tera  select-tickers.html.tera  select-tickers.tera
src/: AvanzaSearch.rs  avanza_get_fund_info.rs  avanza_get_stock_info.rs  avanza_search.rs  ghostfolio_api.rs  main.rs
templates/: select-tickers.html.tera
