[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"]}
lazy_static = "1.4"
futures = "0.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
